--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -14,10 +14,12 @@ $bp-desktop-m: 1536px;
 $bp-desktop-l: 1920px;
 
 //colors  llamar con abstracts.$
-$gray: #F2F2F2;
-$black: #1A1A1A;
-$gray_2: #333333;
-$orange: #f68019;
+$negro: #131457;
+$blanco: whitesmoke;
+$azul: #1A8FE3;
+$celeste: #92DCE5;
+$naranja: #F08700;
+
 
 //gradientes llamar siempre en background
 
