--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -9,11 +9,14 @@
 html *{
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
-   
-    
+    box-sizing: border-box;    
+}
+
+body{
+    margin: 0;
 }
 
 ul{
     list-style: none;
 }
+
