--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -1,9 +1,384 @@
-@use '../abstracts' as ab;
-@forward '../vendors/vendors';
-@use '../base';
-@use '../components' as comps;
-@use '../layout';
-@use '../themes';
-@use '../settings';
+@use "../abstracts" as ab;
+@forward "../vendors/vendors";
+@use "../base";
+@use "../components" as comps;
+@use "../layout";
+@use "../themes";
+@use "../settings";
 
+body {
+  margin: 0;
+  padding: 0;
 
+  //header
+  header {
+    div.header_container {
+      display: flex;
+      // display: grid;
+      // grid-template-columns: 1fr 1fr;
+      align-items: center;
+      gap: 2rem;
+      padding: 1rem 1rem;
+      div.logo_container {
+        display: flex;
+        gap: 1rem;
+        flex-direction: row;
+        align-items: center;
+        img {
+          max-width: 25%;
+        }
+        h1 {
+          color: ab.$negro;
+          font-family: "Montserrat", sans-serif;
+          font-size: 0.75rem;
+          
+        }
+      }
+
+      button.menu_button {
+        border: none;
+        display: none;
+        font-size: 3rem;
+        background-color: transparent;
+        justify-self: right;
+        border-radius: 8px;
+        color: ab.$naranja;
+        cursor: pointer;
+      }
+
+      button.close_button {
+        display: none;
+      }
+
+      nav #menu {
+        ul {
+          display: flex;
+          flex-direction: row;
+          gap: 2rem;
+          justify-content: space-evenly;
+          li a {
+            font-family: "Sarala", sans-serif;
+            text-decoration: none;
+            color: ab.$negro;
+          }
+        }
+      }
+
+      //responsive para el navbar 768px
+      @media screen and (max-width: 768px) {
+        button.menu_button {
+          display: block;
+        }
+
+        button.close_button {
+          display: block;
+          border: none;
+          background-color: transparent;
+          color: ab.$negro;
+          font-size: 2rem;
+          cursor: pointer;
+        }
+
+        nav.menu {
+          opacity: 0;
+          visibility: hidden;
+          display: none;
+          display: flex;
+          flex-direction: column;
+          align-items: end;
+          gap: 1rem;
+          position: absolute;
+          top: 83px;
+          left: 584px;
+          padding: 16px;
+          background: #ffffff;
+          background: linear-gradient(
+            134deg,
+            rgba(255, 255, 255, 0.71) 100%,
+            rgba(184, 223, 165, 0.96) 100%
+          );
+          border-radius: 0 0 8px 8px;
+          z-index: 2;
+
+          @include ab.breakpoint(mobile-l) {
+            top: 81px;
+            left: 0;
+            right: 0;
+          }
+
+          @include ab.breakpoint(mobile-m) {
+            top: 76px;
+            left: 0;
+            right: 0;
+          }
+
+          @include ab.breakpoint(mobile-s) {
+            top: 76px;
+            left: 0px;
+            right: 0;
+          }
+
+          ul {
+            flex-direction: column;
+            align-items: end;
+          }
+        }
+
+        nav.visible {
+          opacity: 1;
+          visibility: visible;
+        }
+      }
+    }
+
+    div.hero_container {
+      background: #F08700;
+background: linear-gradient(359deg, rgba(240, 135, 0, 1) 6%, rgba(146, 220, 229, 0.79) 40%, rgba(26, 143, 227, 1) 89%);
+      padding: 1rem 1rem;
+      display: flex;
+      gap: 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 1rem;
+
+      img {
+        max-width: 70%;
+      }
+
+      div.hero_text {
+
+        p.sociedad{
+          font-family: "Montserrat", sans-serif;
+          
+          font-weight: 600;
+          color: #00072d;
+          background-image: linear-gradient(
+            45deg,
+            #00072d 33%,
+            #0a2472 66%,
+            #0e6ba8 100%
+          );
+          background-clip: text;
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          display: inline-block;
+          text-decoration: underline;
+          text-decoration-thickness: 1px;
+          text-decoration-color: ab.$negro;
+          text-underline-offset: 5px;
+        }
+        
+        h1 {
+          font-family: "Montserrat", sans-serif;
+          color: #00072d;
+          background-image: linear-gradient(
+            45deg,
+            #00072d 33%,
+            #0a2472 66%,
+            #0e6ba8 100%
+          );
+          background-clip: text;
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          display: inline-block;
+          font-size: 3rem;
+        }
+        
+      }
+    }
+  }
+
+  //main
+  main{
+    
+    div.main_container{
+       padding: 0rem;
+    }
+   
+    section.presentacion{
+     padding: 1rem;
+    
+      article._presen{
+        padding: 1rem;
+        margin-bottom: 1rem;
+        border-radius: 10px;
+        box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
+        -webkit-box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
+        -moz-box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
+        background-image: url(/img/red_neuronal-ilum.jpeg);
+        background-blend-mode: multiply;
+        background-size: auto;
+        
+
+        div.presentacion_titulo{
+          display: flex;
+          gap: 1rem;
+          align-items: center;
+          margin-bottom: 1rem;
+          img{
+            max-width: 15%;
+          }
+        
+          h2{
+            color: ab.$blanco;
+            font-family: "Libre Franklin", sans-serif;
+            text-decoration: underline;
+            text-decoration-thickness: 1px;
+            text-decoration-color: ab.$blanco;
+            text-underline-offset: 5px;
+            
+            
+          }
+        }
+        
+        p{
+          font-family: "Sarala", sans-serif;
+          line-height: 1.5rem;
+          color: ab.$negro;
+        }
+      }
+      .quienes{
+        background-color: rgb(255, 129, 45);
+        background-position: 1200px -289px;
+      }
+      .mision{
+        background-color: #46575f;
+        background-position: 12px 304px;
+        position: relative;
+        z-index: 2;
+      }
+      .vision{
+        background-color: #34c7e0;
+        background-position: -1200px 400px;
+        
+      }
+    }
+
+    section.actividades{
+ 
+      padding: 1rem;
+      text-align: center;
+      border-top: 1px solid rgba(128, 128, 128, 0.589);
+      border-bottom: 1px solid rgba(128, 128, 128, 0.589);
+      margin-bottom: 2rem;
+      
+      h3{
+        font-size: 1.5rem;
+        margin-top: 1rem;
+        margin-bottom: 2rem;
+        font-family: "Libre Franklin", sans-serif;
+        color: ab.$negro;
+        text-shadow: 3px -1px 6px rgba(0,0,0,0.54);
+      }
+
+      #eventos_pasados_title{
+        color: ab.$negro;
+      }
+
+      article.evento{
+        position: relative;
+        margin-bottom: 1rem;
+        
+        img{
+          border-radius: 10px;
+          max-width: 325px;
+          box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
+        -webkit-box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
+        -moz-box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
+        }
+        p.fecha_cuadro{
+          display: inline-block;
+          background-color: ab.$celeste;
+          color: ab.$negro;
+          position: relative;
+          top: 0px;
+          padding: 0.5rem;
+          position: absolute;
+          top: 160px;
+          right: 25px;
+          border-radius: 5px;
+          font-family: "Sarala", sans-serif;
+          font-size: 1rem;
+          line-height: 16px;
+          span{
+            font-size: 0.75rem;
+          }
+        }
+
+        p.fecha_pasada{
+          background-color: ab.$naranja;
+        }
+
+        div.eventos_datos{
+          text-align: left;
+          padding: 0.5rem;
+          h4{
+            font-family: "Libre Franklin", sans-serif;
+            color: ab.$negro;
+            text-decoration: underline;
+          }
+          p{
+            font-family: "Sarala", sans-serif;
+            color: ab.$negro;
+            i{
+              margin-right: 0.5rem;
+              color: ab.$negro;
+            }
+          }
+        }
+
+      }
+
+      a{
+        @include comps.boton_1;
+      }
+
+      #boton_2{
+        @include comps.boton_2;
+      }
+    }
+
+    section.directorio{
+      padding: 1rem;
+      text-align: center;
+      background-color: ab.$celeste;
+
+      h2{
+        font-family: "Montserrat", sans-serif;
+        color: ab.$blanco;
+        text-shadow: 3px -1px 6px rgba(0,0,0,0.54);
+      }
+
+      div.miembros{
+        display: flex;
+        flex-wrap: wrap;
+        
+        article.miembro_container{
+          padding: 1rem;
+          max-width: 50%;
+          img{
+            max-width: 100%;
+            border-radius: 10px;
+            box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
+            -webkit-box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
+            -moz-box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
+          }
+        }
+
+        div.miembros_text{
+          h3{
+            color: ab.$negro;
+            font-family: "Libre Franklin", sans-serif;
+          } 
+          p{
+            color: ab.$negro;
+            font-family: "Sarala", sans-serif;
+            line-height: 16px;
+          }
+        }
+      }
+      
+    }
+  }
+}
