--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,3 +1,181 @@
-@use '../abstracts/' as abst;
+@use '../abstracts/' as ab;
 @use '../components/' as comps;
 
+//header
+  header {
+    div.header_container {
+      display: flex;
+      // display: grid;
+      // grid-template-columns: 1fr 1fr;
+      align-items: center;
+      gap: 2rem;
+      padding: 1rem 1rem;
+      div.logo_container {
+        display: flex;
+        gap: 1rem;
+        flex-direction: row;
+        align-items: center;
+        img {
+          max-width: 25%;
+        }
+        h1 {
+          color: ab.$negro;
+          font-family: "Montserrat", sans-serif;
+          font-size: 0.75rem;
+          
+        }
+      }
+
+      button.menu_button {
+        border: none;
+        display: none;
+        font-size: 3rem;
+        background-color: transparent;
+        justify-self: right;
+        border-radius: 8px;
+        color: ab.$naranja;
+        cursor: pointer;
+      }
+
+      button.close_button {
+        display: none;
+      }
+
+      nav #menu {
+        ul {
+          display: flex;
+          flex-direction: row;
+          gap: 2rem;
+          justify-content: space-evenly;
+          li a {
+            font-family: "Sarala", sans-serif;
+            text-decoration: none;
+            color: ab.$negro;
+          }
+        }
+      }
+
+      //responsive para el navbar 768px
+      @media screen and (max-width: 768px) {
+        button.menu_button {
+          display: block;
+        }
+
+        button.close_button {
+          display: block;
+          border: none;
+          background-color: transparent;
+          color: ab.$negro;
+          font-size: 2rem;
+          cursor: pointer;
+        }
+
+        nav.menu {
+          opacity: 0;
+          visibility: hidden;
+          display: none;
+          display: flex;
+          flex-direction: column;
+          align-items: end;
+          gap: 1rem;
+          position: absolute;
+          top: 83px;
+          left: 584px;
+          padding: 16px;
+          background: #ffffff;
+          background: linear-gradient(
+            134deg,
+            rgba(255, 255, 255, 0.71) 100%,
+            rgba(184, 223, 165, 0.96) 100%
+          );
+          border-radius: 0 0 8px 8px;
+          z-index: 2;
+
+          @include ab.breakpoint(mobile-l) {
+            top: 81px;
+            left: 0;
+            right: 0;
+          }
+
+          @include ab.breakpoint(mobile-m) {
+            top: 76px;
+            left: 0;
+            right: 0;
+          }
+
+          @include ab.breakpoint(mobile-s) {
+            top: 76px;
+            left: 0px;
+            right: 0;
+          }
+
+          ul {
+            flex-direction: column;
+            align-items: end;
+          }
+        }
+
+        nav.visible {
+          opacity: 1;
+          visibility: visible;
+        }
+      }
+    }
+
+    div.hero_container {
+      background: #F08700;
+background: linear-gradient(359deg, rgba(240, 135, 0, 1) 6%, rgba(146, 220, 229, 0.79) 40%, rgba(26, 143, 227, 1) 89%);
+      padding: 1rem 1rem;
+      display: flex;
+      gap: 1rem;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin-bottom: 1rem;
+
+      img {
+        max-width: 70%;
+      }
+
+      div.hero_text {
+
+        p.sociedad{
+          font-family: "Montserrat", sans-serif;
+          
+          font-weight: 600;
+          color: #00072d;
+          background-image: linear-gradient(
+            45deg,
+            #00072d 33%,
+            #0a2472 66%,
+            #0e6ba8 100%
+          );
+          background-clip: text;
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          display: inline-block;
+          text-decoration: underline;
+          text-decoration-thickness: 1px;
+          text-decoration-color: ab.$negro;
+          text-underline-offset: 5px;
+        }
+        
+        h1 {
+          font-family: "Montserrat", sans-serif;
+          color: #00072d;
+          background-image: linear-gradient(
+            45deg,
+            #00072d 33%,
+            #0a2472 66%,
+            #0e6ba8 100%
+          );
+          background-clip: text;
+          -webkit-background-clip: text;
+          -webkit-text-fill-color: transparent;
+          display: inline-block;
+          font-size: 3rem;
+        }
+        
+      }
+    }
+  }
