--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -10,184 +10,7 @@ body {
   margin: 0;
   padding: 0;
 
-  //header
-  header {
-    div.header_container {
-      display: flex;
-      // display: grid;
-      // grid-template-columns: 1fr 1fr;
-      align-items: center;
-      gap: 2rem;
-      padding: 1rem 1rem;
-      div.logo_container {
-        display: flex;
-        gap: 1rem;
-        flex-direction: row;
-        align-items: center;
-        img {
-          max-width: 25%;
-        }
-        h1 {
-          color: ab.$negro;
-          font-family: "Montserrat", sans-serif;
-          font-size: 0.75rem;
-          
-        }
-      }
-
-      button.menu_button {
-        border: none;
-        display: none;
-        font-size: 3rem;
-        background-color: transparent;
-        justify-self: right;
-        border-radius: 8px;
-        color: ab.$naranja;
-        cursor: pointer;
-      }
-
-      button.close_button {
-        display: none;
-      }
-
-      nav #menu {
-        ul {
-          display: flex;
-          flex-direction: row;
-          gap: 2rem;
-          justify-content: space-evenly;
-          li a {
-            font-family: "Sarala", sans-serif;
-            text-decoration: none;
-            color: ab.$negro;
-          }
-        }
-      }
-
-      //responsive para el navbar 768px
-      @media screen and (max-width: 768px) {
-        button.menu_button {
-          display: block;
-        }
-
-        button.close_button {
-          display: block;
-          border: none;
-          background-color: transparent;
-          color: ab.$negro;
-          font-size: 2rem;
-          cursor: pointer;
-        }
-
-        nav.menu {
-          opacity: 0;
-          visibility: hidden;
-          display: none;
-          display: flex;
-          flex-direction: column;
-          align-items: end;
-          gap: 1rem;
-          position: absolute;
-          top: 83px;
-          left: 584px;
-          padding: 16px;
-          background: #ffffff;
-          background: linear-gradient(
-            134deg,
-            rgba(255, 255, 255, 0.71) 100%,
-            rgba(184, 223, 165, 0.96) 100%
-          );
-          border-radius: 0 0 8px 8px;
-          z-index: 2;
-
-          @include ab.breakpoint(mobile-l) {
-            top: 81px;
-            left: 0;
-            right: 0;
-          }
-
-          @include ab.breakpoint(mobile-m) {
-            top: 76px;
-            left: 0;
-            right: 0;
-          }
-
-          @include ab.breakpoint(mobile-s) {
-            top: 76px;
-            left: 0px;
-            right: 0;
-          }
-
-          ul {
-            flex-direction: column;
-            align-items: end;
-          }
-        }
-
-        nav.visible {
-          opacity: 1;
-          visibility: visible;
-        }
-      }
-    }
-
-    div.hero_container {
-      background: #F08700;
-background: linear-gradient(359deg, rgba(240, 135, 0, 1) 6%, rgba(146, 220, 229, 0.79) 40%, rgba(26, 143, 227, 1) 89%);
-      padding: 1rem 1rem;
-      display: flex;
-      gap: 1rem;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-bottom: 1rem;
-
-      img {
-        max-width: 70%;
-      }
-
-      div.hero_text {
-
-        p.sociedad{
-          font-family: "Montserrat", sans-serif;
-          
-          font-weight: 600;
-          color: #00072d;
-          background-image: linear-gradient(
-            45deg,
-            #00072d 33%,
-            #0a2472 66%,
-            #0e6ba8 100%
-          );
-          background-clip: text;
-          -webkit-background-clip: text;
-          -webkit-text-fill-color: transparent;
-          display: inline-block;
-          text-decoration: underline;
-          text-decoration-thickness: 1px;
-          text-decoration-color: ab.$negro;
-          text-underline-offset: 5px;
-        }
-        
-        h1 {
-          font-family: "Montserrat", sans-serif;
-          color: #00072d;
-          background-image: linear-gradient(
-            45deg,
-            #00072d 33%,
-            #0a2472 66%,
-            #0e6ba8 100%
-          );
-          background-clip: text;
-          -webkit-background-clip: text;
-          -webkit-text-fill-color: transparent;
-          display: inline-block;
-          font-size: 3rem;
-        }
-        
-      }
-    }
-  }
+  //header --> layout/header
 
   //main
   main{
@@ -222,13 +45,7 @@ background: linear-gradient(359deg, rgba(240, 135, 0, 1) 6%, rgba(146, 220, 229,
         
           h2{
             color: ab.$blanco;
-            font-family: "Libre Franklin", sans-serif;
-            text-decoration: underline;
-            text-decoration-thickness: 1px;
-            text-decoration-color: ab.$blanco;
-            text-underline-offset: 5px;
-            
-            
+            font-family: "Libre Franklin", sans-serif; 
           }
         }
         
@@ -261,7 +78,7 @@ background: linear-gradient(359deg, rgba(240, 135, 0, 1) 6%, rgba(146, 220, 229,
       text-align: center;
       border-top: 1px solid rgba(128, 128, 128, 0.589);
       border-bottom: 1px solid rgba(128, 128, 128, 0.589);
-      margin-bottom: 2rem;
+      margin-bottom: 1rem;
       
       h3{
         font-size: 1.5rem;
@@ -342,39 +159,118 @@ background: linear-gradient(359deg, rgba(240, 135, 0, 1) 6%, rgba(146, 220, 229,
     section.directorio{
       padding: 1rem;
       text-align: center;
-      background-color: ab.$celeste;
+      // background-color: ab.$celeste;
 
       h2{
         font-family: "Montserrat", sans-serif;
-        color: ab.$blanco;
+        color: ab.$negro;
         text-shadow: 3px -1px 6px rgba(0,0,0,0.54);
+        margin-bottom: 1rem;
       }
 
       div.miembros{
-        display: flex;
-        flex-wrap: wrap;
+        // display: flex;
+        // flex-wrap: wrap;
         
         article.miembro_container{
           padding: 1rem;
-          max-width: 50%;
+          max-width: 100%;
+          position: relative;
+          
           img{
             max-width: 100%;
             border-radius: 10px;
-            box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
-            -webkit-box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
-            -moz-box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
+            
           }
         }
 
         div.miembros_text{
+          
+          position: absolute;
+          top: 218px;
+          margin: 4px;
+          width: 280px;
+          background-color: ab.$naranja;
+          padding: 0.5rem;
+          border-radius: 0 10px 10px 0;
+          box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
+            -webkit-box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
+            -moz-box-shadow: 1px 18px 25px -7px rgba(0,7,45,0.6);
           h3{
             color: ab.$negro;
+            font-size: 1rem;
             font-family: "Libre Franklin", sans-serif;
           } 
           p{
             color: ab.$negro;
             font-family: "Sarala", sans-serif;
-            line-height: 16px;
+            line-height: 18px;
+          }
+        }
+      }
+      
+    }
+
+    section.recursos{
+      background-color: ab.$blanco;
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      align-items: center;
+      
+
+      div.recursos_container{
+        padding: 1rem;
+        max-width: 75%;
+        text-align: center;
+        margin-top: 2rem;
+        
+        &:hover{
+          background-color: ab.$celeste;
+          border-radius: 10px;
+        }
+        a{
+          text-decoration: none;
+          padding: 0.5rem;
+          
+          i{
+            color: ab.$azul;
+            font-size: 4rem;
+          }
+          h4{
+            color: ab.$naranja;
+          }
+          p{
+            color: ab.$negro; 
+          }
+        }
+      }
+
+    }
+
+    section.sponsors{
+      margin-top: 2rem;
+      p{
+        text-align: center;
+        color: gray;
+        font-family: "Sarala", sans-serif;
+        margin: 2rem;
+      }
+      
+      div.sponsors_container{
+        padding: 1rem;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-evenly;
+        align-items: center;
+        gap: 2rem;
+        text-align: center;
+        
+        picture{
+          text-align: center;
+          max-width: 75%;
+          img{
+            max-width: 60%;
           }
         }
       }
